Removed parser meta tokens; Changes ImmutableMap to Map
Signed-off-by: Andrew Carbonetto <andrewc@bitquilltech.com>